# Substrate

./: .gitignore  Cargo.toml  Polkadot-settings.json  README.md  frame-weight-template.hbs
chainSpec/: mainnetSpec.json  testnetSpec.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: benchmarking.rs  lib.rs  tests.rs  tests_composite.rs  tests_local.rs  weights.rs
pallets/collective/: Cargo.toml
pallets/collective/src/: lib.rs  sudo.rs  tests.rs
pallets/did/: Cargo.toml
pallets/did/src/: lib.rs  multiaddress.rs  tests.rs
pallets/node-authorization/: Cargo.toml
pallets/node-authorization/src/: lib.rs
pallets/schema/: Cargo.toml
pallets/schema/src/: lib.rs  tests.rs
pallets/tokens/: Cargo.toml  README.md
pallets/tokens/src/: default_weight.rs  imbalances.rs  lib.rs  migration.rs  structs.rs  tests.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs  tests.rs
pallets/validator_set/: Cargo.toml
pallets/validator_set/src/: lib.rs  tests.rs
pallets/vc/: Cargo.toml
pallets/vc/src/: lib.rs  migration.rs  structs.rs  tests.rs
pallets/verified_credential/: Cargo.toml
pallets/verified_credential/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: devstart.sh
