[package]
authors = ['Metablockchain']
edition = '2018'
name = 'metablockchain-runtime'
version = '1.3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder  = { package = 'substrate-wasm-builder', version = '4.0.0' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# local dependencies
schema = { version = '1.0.0', default-features = false, path = '../pallets/schema' }
verified_credential = { version = '1.0.0', default-features = false, path = '../pallets/verified_credential' }
validator_set = { version = '1.0.0', default-features = false, path = '../pallets/validator_set' }
tokens = { version = '1.0.0', default-features = false, path = '../pallets/tokens' }
vc = { version = '1.0.0', default-features = false, path = '../pallets/vc' }
balances = { version = '1.0.0', default-features = false, path = '../pallets/balances' }
did = { version = '1.1.0', default-features = false, path = '../pallets/did' }
collective = { version = '1.0.0', default-features = false, path = '../pallets/collective' }
node-authorization = { version = '1.0.0', default-features = false, path = '../pallets/node-authorization' }

# Substrate dependencies
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
orml-traits = { version = "0.4.0", default-features = false }
sp-arithmetic = { default-features = false, version = '3.0.0' }
smallvec = "1.4.1"

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    "frame-benchmarking",
    'frame-system/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'balances/runtime-benchmarks',
    'collective/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'schema/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'collective/std',
    'sp-io/std',
    'did/std',
    'vc/std',
    'node-authorization/std',
    'sp-arithmetic/std',
]
