[package]
name = "balances"
authors = [ 'Metablockchain' ]
version = "1.0.0"
edition = "2018"
description = "Custom pallet to manage balances. Forked from FRAME pallet-balances"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false}
sp-runtime = { version = "3.0.0", default-features = false}
frame-support = { version = "3.0.0", default-features = false}
frame-system = { version = "3.0.0", default-features = false}
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
did = { version = "1.1.0", default-features = false, path="../did"}
sp-core = { default-features = false, version = '3.0.0' }
validator_set = { default-features = false, version = '1.0.0', path = '../validator_set'}

[dev-dependencies]
sp-io = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
	"serde",
	"did/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]