[package]
authors = [ 'Metablockchain' ]
edition = '2018'
name = 'collective'
version = '1.0.0'
description = 'Pallet to take collective decision via voting council'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
did = { version = "1.1.0", default-features = false, path = "../did" }
validator_set = { version = "1.0.0", default-features = false, path = "../validator_set" }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.3.1"
balances = { version = "1.0.0", default-features = false, path = "../balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"did/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]