[package]
authors = [ 'Metablockchain' ]
edition = '2018'
name = 'did'
version = '1.1.0'
description = 'Pallet to issue DID'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
validator_set = { default-features = false, version = '1.0.0', path = '../validator_set'}
serde = { features = ['derive'], optional = true, version = '1.0.101' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde',
    'validator_set/std'
]
